--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,23 @@
-.small-top .date-sec {
-    font-size: 13px;
-    font-weight: 600;
-    float: left;
-    margin-top: 4px;
-    color: #898989;
-}
+.navbar {
+      margin-bottom: 0;
+      border-radius: 0;
+    }
+    
+    /* Add a gray background color and some padding to the footer */
+    footer {
+      background-color: #f2f2f2;
+      padding: 25px;
+    }
+    
+  .carousel-inner img {
+      width: 100%; /* Set width to 100% */
+      margin: auto;
+      min-height:200px;
+  }
+
+  /* Hide the carousel text when the screen is less than 600 pixels wide */
+  @media (max-width: 600px) {
+    .carousel-caption {
+      display: none; 
+    }
+  }
