--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,9 +38,49 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <!--
                     <li><a href="#"><span id="btnLogin" class="glyphicon glyphicon-log-in"></span> Login</a></li>
                     <li><a href="#"><span id="btnSignUp" class="glyphicon glyphicon-user"></span>Sign Up</a></li>
                     <li><a href="#"><span id="btnLogout" class="glyphicon glyphicon-log-out
+ hide"></span>Log Out</a></li>
+-->
+                    <li>
+                        <p class="navbar-text">Already have an account?</p>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="glyphicon glyphicon-log-in dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+                        <ul id="login-dp" class="dropdown-menu">
+                        </ul>
+                        <li>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    Login
+                                    <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+                                        <div class="form-group">
+                                            <label class="sr-only" for="exampleInputEmail2">Email address</label>
+                                            <input type="email" class="form-control" id="txtEmail" placeholder="Email address" required>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="sr-only" for="exampleInputPassword2">Password</label>
+                                            <input type="password" class="form-control" id="txtPassword" placeholder="Password" required>
+                                            <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" id="btnLogin" class="btn btn-primary btn-block">Sign in</button>
+                                        </div>
+                                        <div class="checkbox">
+                                            <label>
+											 <input type="checkbox"> keep me logged-in
+											 </label>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="bottom text-center">
+                                    New here ? <a href="#"><b>Create Account</b></a>
+                                </div>
+                            </div>
+                        </li>
+                        <li><a href="#"><span id="btnLogout" class="glyphicon glyphicon-log-out
  hide"></span>Log Out</a></li>
                 </ul>
             </div>
