updated the myCarousel with images from movies API

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,17 +7,67 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
+
       <div class="item active">
-        <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
+        <img id="img1">
         <div class="carousel-caption">
         </div>      
       </div>
 
       <div class="item">
-        <img src="https://placehold.it/1200x400?text=Another Image Maybe" alt="Image">
+        <img id="img2">
         <div class="carousel-caption">
         </div>      
       </div>
+
+      <div class="item">
+        <img id="img3">
+        <div class="carousel-caption">
+        </div>      
+      </div>
+
+      <div class="item">
+        <img id="img4">
+        <div class="carousel-caption">
+        </div>      
+      </div>
+
+      <div class="item">
+        <img id="img5">
+        <div class="carousel-caption">
+        </div>      
+      </div>
+
+      <div class="item">
+        <img id="img6">
+        <div class="carousel-caption">
+        </div>      
+      </div>
+
+      <div class="item">
+        <img id="img7">
+        <div class="carousel-caption">
+        </div>      
+      </div>
+
+       <div class="item">
+        <img id="img8">
+        <div class="carousel-caption">
+        </div>      
+      </div>
+
+       <div class="item">
+        <img id="img9">
+        <div class="carousel-caption">
+        </div>      
+      </div>
+
+       <div class="item">
+        <img id="img10">
+        <div class="carousel-caption">
+        </div>      
+      </div>
+
     </div>
 
     <!-- Left and right controls -->
