--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -142,7 +142,7 @@
                                             </div>
                                             <div class="checkbox">
                                                 <label>
-											 <input type="checkbox"> keep me logged-in
+											 <input type="checkbox"> Keep Me Logged In
 											 </label>
                                             </div>
                                         </form>
