small html changes

--- a/views/survey.handlebars
+++ b/views/survey.handlebars
@@ -1,7 +1,7 @@
-    <div class="jumbotron" id="jumbo">
-      <h1>Movie Personality Quiz!</h1>
+    <div class="jumbotron" id="jumbo"><center>
+      <h1>Vina Movie Personality Quiz!</h1>
       <div id="howToPlay">
-      <p>Take the quiz below to help us find what type of movies are a match for you!</p>
+      <p>Take the quiz below to help us determine what type of movies are a match for you!</p></center>
     </div>
     </div>
       <div id="radioButtons">
