--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,6 @@
+body {
+    background-color: #000000;
+}
 .small-top .date-sec {
     font-size: 13px;
     font-weight: 600;
@@ -9,8 +12,9 @@
 /* Add a gray background color and some padding to the footer */
 
 footer {
-    background-color: #f2f2f2;
+    background-color: #222222;
     padding: 25px;
+    color: #898989;
 }
 
 .carousel-inner img {
