--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -122,9 +122,9 @@
 
                         <input id="txtEmail" type="email" placeholder="Email">
                         <input id="txtPassword" type="password" placeholder="Password">
-                        <button id="btnLogin" class="btn btn-action">Log In</button>
-                        <button id="btnSignUp" class="btn btn-secondary">Sign Up</button>
-                        <button id="btnLogout" class="btn btn-action hide">Log out</button>
+                        <button id="btnLogin" class="btn btn-primary">Log In</button>
+                        <button id="btnSignUp" class="btn btn-primary">Sign Up</button>
+                        <button id="btnLogout" class="btn btn-warning hide">Log out</button>
 
                     </ul>
                 </div>
