deleted the lower div in index.handelbars and updated thr header title in main.handelbars

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,22 @@
 body {
     background-color: #000000;
+    color: #fff;
 }
+
+a.navbar-brand:link {
+    font-size: 42px;
+    color: #fff;
+}
+a.navbar-brand:visited {
+    color: #fff;
+}
+a.navbar-brand:hover {
+    color: #fff;
+}
+.slogan {
+    font-size: 14px;
+}
+
 .small-top .date-sec {
     font-size: 13px;
     font-weight: 600;
