--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                <a class="navbar-brand" href="/">Movie Matcher</a>
+                <a class="navbar-brand" href="/">VINA</a>
+                <p class="slogan">MATCHING A MOVIE BASED ON YOUR PERSONALITY</p>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -136,7 +137,7 @@
     {{{ body }}}
 
     <footer class="container-fluid text-center">
-        <p>Footer Text</p>
+        <p>The Movie Team</p>
     </footer>
     <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
