--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -81,7 +81,7 @@
     </a>
 </div>
   
-<div class="container text-center">    
+<!--<div class="container text-center">    
   <h3>What We Do</h3><br>
   <div class="row">
     <div class="col-sm-4">
@@ -100,5 +100,5 @@
        <p>Some text..</p>
       </div>
     </div>
-  </div>
-</div><br>
+  </div> 
+</div><br> -->
