--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,13 +16,24 @@ a.navbar-brand:hover {
 .slogan {
     font-size: 14px;
 }
-
+.jumbotron {
+    background-color: #000;
+    font-size: 58px;
+    color: #c96a27;
+}
+h2 {
+    color: #87fcfd;
+}
 .small-top .date-sec {
     font-size: 13px;
     font-weight: 600;
     float: left;
     margin-top: 4px;
     color: #898989;
+}
+
+#submit {
+    margin-bottom: 55px;
 }
 
 /* Add a gray background color and some padding to the footer */
