--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,7 +60,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         Please Login
-                                        <form class="form" role="form" method="POST" action="/api/find" accept-charset="UTF-8" id="login-nav">
+                                        <form class="form" role="form" accept-charset="UTF-8" id="login-nav">
                                             <div class="form-group">
                                                 <label class="sr-only" for="exampleInputEmail2">Email address</label>
                                                 <input type="email" class="form-control" id="logEmail" placeholder="Email address" name="email" required>
