--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,6 @@
 <h1 id="profileHeading">Your Movie Matches:</h1>
-{{#each movies}}
+{{#each results}}
 
-<img src="https://image.tmdb.org/t/p/w640" + {{#this.poster_path}}> {{/each}}
+<img id="profilePosters" src="https://image.tmdb.org/t/p/w640{{this.poster_path}}">
+
+{{/each}}
