fixed login issue

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 <h1 id="profileHeading">Your Movie Matches:</h1>
 {{#each results}}
 
-<img id="profilePosters" src="https://image.tmdb.org/t/p/w640{{this.poster_path}}">
+<img style="width: 200px; height: auto;" id="profilePosters" src="https://image.tmdb.org/t/p/w640{{this.poster_path}}">
 
 {{/each}}
