--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- My css -->
-   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+   <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
     <!-- moments.js -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
@@ -141,8 +141,8 @@
     </footer>
     <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="assets/js/app.js"></script>
-    <script src="assets/js/survey.js"></script>
+    <script src="/assets/js/app.js"></script>
+    <script src="/assets/js/survey.js"></script>
 
 </body>
 
